@@ -6,10 +6,12 @@ Changelog for miniShop.
 - Убрал отправку покупателя на z-payment.ru по умолчанию из чанков.
 - Добавлен richtext редактор в окно редактирования товара.
 - Добавлены теги для товарам. Теперь рвы можете связывать товары через отдельную таблицу.
+- Улучшено копирование товаров
 -----
 - Removed redirect customers to z-payment.ru by default from chunks.
 - Added richtext editor to goods editor window.
 - Added tags for goods. Now you can linking goods through separate table.
+- Improved duplicating of goods
 
 1.6.0 rc (28.04.2012)
 =============
